[gd_scene load_steps=5 format=3 uid="uid://c1r16btphdtjk"]

[ext_resource type="Script" path="res://scenes/bullet.gd" id="1_bgmrn"]
[ext_resource type="Texture2D" uid="uid://n1b60i1ra276" path="res://gfx/enemy_bullet.png" id="1_bgs4e"]
[ext_resource type="Texture2D" uid="uid://dhy6slmskjk3v" path="res://gfx/player_bullet.png" id="2_n0w10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_osocj"]
size = Vector2(4, 12)

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_bgmrn")

[node name="SpriteEnemy" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_bgs4e")

[node name="SpritePlayer" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_n0w10")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_osocj")

[node name="Forward" type="Marker2D" parent="."]
position = Vector2(0, -9)

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
